# predixen

./: .env.example  .gitignore  .replit  AUDIT_RESULTS.txt  CHANGELOG.md  CHANGES.md  COPILOT_TRUST_AUDIT.md  CREDENTIAL_ENCRYPTION_QUICKSTART.md  CREDENTIAL_SECURITY.md  CSRF_IMPLEMENTATION_SUMMARY.md  CSRF_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_WITH_CLAUDE_CHROME.md  ENCRYPTION_SECURITY_INDEX.md  ERROR_BOUNDARY_IMPLEMENTATION_SUMMARY.md  ERROR_BOUNDARY_QUICKSTART.md  FILES_MANIFEST.md  FounderConsole_Engineering_Audit.docx  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PM_PRODUCT_AUDIT.md  PREDIXEN_TEAM_UPDATE.md  PROMPT_INJECTION_DEFENSE_USAGE.md  QUICK_REFERENCE.md  QUICK_START.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  README_TEST_AUDIT.md  REPLIT_DEPLOYMENT_GUIDE.md  SECURITY_FIX_SUMMARY.md  TESTING_QUICK_START.md  TEST_COVERAGE_AUDIT.md  TEST_COVERAGE_SUMMARY.md  UI_IMPROVEMENTS_INDEX.md  UI_IMPROVEMENTS_SUMMARY.md  code_changes.patch  design_guidelines.md  email_preview_app_overview.html  package-lock.json  package.json  (+4 more)
Fund-Flow-replit-ready/: .replit  email_preview_app_overview.html  package.json  replit.md
attached_assets/: Calc_Test_Fixtures_1771360200223.xlsx  Calc_Test_Fixtures_v2_1771360200222.xlsx  Pasted--AUTONOMOUS-FIX-TEST-FIX-LOOP-Target-8-10-Score-You-are_1772130355448.txt  Pasted--Bug-Summary-While-testing-the-RunwayAI-financial-simul_1768475584339.txt  Pasted--CRITICAL-ISSUES-FOUND-Issue-1-Tab-Routing-Navigation-B_1769861339468.txt  Pasted--Feature-UI-UX-Improvement-Ideas-Trust-P0-Problem-Evide_1771083817680.txt  (+114 more)
(+670 files in other folders)
